...
            onClick = {
                val intent = Intent(context, RegisterActivity::class.java)
                context.startActivity(intent)
            },
            modifier = Modifier
                .padding(16.dp)
                .testTag("btn_not_registered")
        ) {
            Text(text = "Still don't have an account? Register now")
        }
        Button(
            onClick = {
                googleSignIn()
...
